# vs_auth_service

./: .env-example  README.md  alembic.ini  pyproject.toml
src/: main.py
src/api/: auth.py  dependencies.py  roles.py  routers.py  services.py  users.py
src/core/: auth.py  config.py  logger.py
src/db/: base.py  session.py
src/exceptions/: custom_exceptions.py
src/migrations/: env.py
src/migrations/versions/: 22809ef08fb5_initial.py
src/models/: __init__.py  roles.py  services.py  user_roles.py  users.py
src/repositories/: base.py  requests.py  roles.py  services.py  user_roles.py  users.py
src/schemas/: roles.py  services.py  users.py
src/utils/: create_superuser.py
